--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -46,24 +46,16 @@
                 app:layout_constraintTop_toTopOf="@+id/imgProduct" />
 
             <TextView
-                android:id="@+id/tvDescription"
+                android:id="@+id/tvQuantity"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginStart="5dp"
-                android:text="Description"
+                android:text="Quantity"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imgProduct"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/imgProduct"
                 app:layout_constraintTop_toBottomOf="@+id/tvItemName" />
-
-            <TextView
-                android:id="@+id/tvQuantity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="Quantity"
-                app:layout_constraintStart_toStartOf="@+id/tvDescription"
-                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
             <ImageButton
                 android:id="@+id/imgUpdate"
